feat(orm): add support for enum